error_log.txt
node : file:///D:/JOSEP
H%20VISHAL/OneDrive/Doc
uments/MSRIT/Internship
%20(Sovely)/E-commerce%
20Website/importCsv.js:
7
At line:1 char:1
+ node importCsv.js 
2>&1 | Out-File 
-Encoding utf8 
error_log.txt
+ 
~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (file:///D:/JO   
 SE.../importCsv.js    
:7:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
import { connectDB } 
from 
'./src/db/index.js';
         ^^^^^^^^^
SyntaxError: The 
requested module 
'./src/db/index.js' 
does not provide an 
export named 
'connectDB'
    at 
ModuleJob._instantiate 
(node:internal/modules/
esm/module_job:220:21)
    at async 
ModuleJob.run (node:int
ernal/modules/esm/modul
e_job:321:5)
    at async onImport.t
racePromise.__proto__ (
node:internal/modules/e
sm/loader:644:26)
    at async asyncRunEn
tryPointWithESMLoader (
node:internal/modules/r
un_main:117:5)

Node.js v22.17.0
